WAVE contrast fix

--- a/src/css/imports/links.css
+++ b/src/css/imports/links.css
@@ -2,10 +2,10 @@
 .breadcrumb {
     font-family: "Poetsen One", sans-serif;
     font-weight: 400;
-    font-style: normal;
+    font-style: normal; 
     margin: 0;
     text-decoration: none;
-    color: var(--gray-3);
+    color: var(--gray-4);
     margin-top: 48px;
     display: inline-block;
 }
